Add: Message Main: Header + Background

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 </head>
 <body>
     <div class="ms-boozapp-container d-flex">
+
+        <!-- Column Main Meesage Box -->
         <div class="ms-list-contact col-4 flex-shrink-0">
+
             <header>
                 <div class="ms-boozapp-header ms-bg-secondary-gray d-flex justify-content-between px-2 align-items-center">
                     <div class="ms-my-profile d-flex align-items-center">
@@ -29,12 +32,57 @@
                         </div>
                     </div>
                     <div class="ms-status-icons">
-                        <a href="http://"><i class="fa-solid fa-circle-notch px-1 fs-4  ms-secondary-color"></i></a>
-                        <a href="http://"><i class="fa-solid fa-message px-1 fs-4  ms-secondary-color"></i></a>
-                        <a href="http://"><i class="fa-solid fa-ellipsis-vertical px-1 fs-4  ms-secondary-color"></i></a>
+                        <a href="http://"><i class="fa-solid fa-circle-notch px-2 fs-4  ms-secondary-color"></i></a>
+                        <a href="http://"><i class="fa-solid fa-message px-2 fs-4  ms-secondary-color"></i></a>
+                        <a href="http://"><i class="fa-solid fa-ellipsis-vertical px-2 fs-4  ms-secondary-color"></i></a>
                     </div>
                 </div>
             </header>
+
+            <main>
+
+            </main>
+        </div>
+
+        <div class="ms-message-main col-8 flex-shrink-0">
+            
+            <header>
+
+                <div class="ms-boozapp-header ms-bg-secondary-gray d-flex justify-content-between px-2 align-items-center">
+                    <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+                    <!-- DEBUG TOKEN -->
+                    <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+
+                    <div class="ms-my-profile d-flex align-items-center">
+
+                        <div class="ms-avatar">
+                            <img src="img/avatar_io.jpg" alt="">
+                        </div>
+                        
+                        <div class="ms-my-profile-name px-2 fs-5">
+                            Sofia
+                        </div>
+
+                    </div>
+
+                    <div class="ms-status-icons">
+                        <a href="http://"><i class="fa-solid fa-circle-notch px-2 fs-4  ms-secondary-color"></i></a>
+                        <a href="http://"><i class="fa-solid fa-message px-2 fs-4  ms-secondary-color"></i></a>
+                        <a href="http://"><i class="fa-solid fa-ellipsis-vertical px-2 fs-4  ms-secondary-color"></i></a>
+                    </div>
+
+                </div>
+
+            </header>
+
+            <main>
+
+            </main>
+
+            <footer>
+
+            </footer>
+
         </div>
     </div>
 
