--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!-- FONT AWESOME-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
+    <!-- VUE JS -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
     <div class="ms-boozapp-container d-flex">
@@ -22,26 +24,35 @@
         <div class="ms-list-contact col-4 flex-shrink-0">
 
             <header>
+
                 <div class="ms-boozapp-header ms-bg-secondary-gray d-flex justify-content-between px-2 align-items-center">
+
                     <div class="ms-my-profile d-flex align-items-center">
+
                         <div class="ms-avatar">
                             <img src="img/avatar_io.jpg" alt="">
                         </div>
+
                         <div class="ms-my-profile-name px-2 fs-5">
                             Sofia
                         </div>
+
                     </div>
-                    <div class="ms-status-icons">
+
+                    <div class="ms-status-icons px-2">
                         <a href="http://"><i class="fa-solid fa-circle-notch px-2 fs-4  ms-secondary-color"></i></a>
                         <a href="http://"><i class="fa-solid fa-message px-2 fs-4  ms-secondary-color"></i></a>
                         <a href="http://"><i class="fa-solid fa-ellipsis-vertical px-2 fs-4  ms-secondary-color"></i></a>
                     </div>
+
                 </div>
+
             </header>
 
             <main>
 
             </main>
+            
         </div>
 
         <div class="ms-message-main col-8 flex-shrink-0">
@@ -65,9 +76,9 @@
 
                     </div>
 
-                    <div class="ms-status-icons">
-                        <a href="http://"><i class="fa-solid fa-circle-notch px-2 fs-4  ms-secondary-color"></i></a>
-                        <a href="http://"><i class="fa-solid fa-message px-2 fs-4  ms-secondary-color"></i></a>
+                    <div class="ms-status-icons px-2">
+                        <a href="http://"><i class="fa-solid fa-magnifying-glass px-2 fs-4  ms-secondary-color"></i></a>
+                        <a href="http://"><i class="fa-solid fa-paperclip px-2 fs-4  ms-secondary-color"></i></a>
                         <a href="http://"><i class="fa-solid fa-ellipsis-vertical px-2 fs-4  ms-secondary-color"></i></a>
                     </div>
 
