Add: Notification Popup

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     </div>
 
                     <div class="ms-status-icons px-2">
-                        <a href="http://"><i class="fa-solid fa-circle-notch px-2 fs-4  ms-secondary-color"></i></a>
-                        <a href="http://"><i class="fa-solid fa-message px-2 fs-4  ms-secondary-color"></i></a>
-                        <a href="http://"><i class="fa-solid fa-ellipsis-vertical px-2 fs-4  ms-secondary-color"></i></a>
+                        <a href="http://"><i class="fa-solid fa-circle-notch px-2 fs-5  ms-secondary-color"></i></a>
+                        <a href="http://"><i class="fa-solid fa-message px-2 fs-5  ms-secondary-color"></i></a>
+                        <a href="http://"><i class="fa-solid fa-ellipsis-vertical px-2 fs-5  ms-secondary-color"></i></a>
                     </div>
 
                 </div>
@@ -50,6 +50,14 @@
             </header>
 
             <main>
+                <!-- POPUP ENABLE NOTIFICATION -->
+                <div class="popup-receive-notification p-3 ms-bg-popup d-flex align-items-center">
+                    <div class="ms-bell-notify d-flex justify-content-center align-items-center fs-5"><i class="fa-solid fa-bell-slash"></i></div>
+                    <div class="ms-popup-text mx-2">
+                        Ricevi notifiche di nuovi messaggi <br>
+                        <small><a href="http://">Attiva notiiche desktop</a></small>
+                    </div>
+                </div>
 
             </main>
             
@@ -77,9 +85,9 @@
                     </div>
 
                     <div class="ms-status-icons px-2">
-                        <a href="http://"><i class="fa-solid fa-magnifying-glass px-2 fs-4  ms-secondary-color"></i></a>
-                        <a href="http://"><i class="fa-solid fa-paperclip px-2 fs-4  ms-secondary-color"></i></a>
-                        <a href="http://"><i class="fa-solid fa-ellipsis-vertical px-2 fs-4  ms-secondary-color"></i></a>
+                        <a href="http://"><i class="fa-solid fa-magnifying-glass px-2 fs-5  ms-secondary-color"></i></a>
+                        <a href="http://"><i class="fa-solid fa-paperclip px-2 fs-5  ms-secondary-color"></i></a>
+                        <a href="http://"><i class="fa-solid fa-ellipsis-vertical px-2 fs-5  ms-secondary-color"></i></a>
                     </div>
 
                 </div>
