add: searchbar contacts

--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
                     </div>
                 </div>
 
+                <div class="chats d-flex flex-column ms-bg-primary-color">
+
+                    <div class="w-100 ms-bg-lightgray-color">
+                        <div class="ms-contacts-searchbar m-2 ms-secondary-color">
+                            <div class="ms-input-icon">
+                                <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                            </div>
+                            <input type="text" placeholder="Cerca o inizia una nuova chat" aria-label="Search" aria-describedby="inputGroup-sizing-sm">
+                        </div>
+                    </div>
+
+                </div>
             </main>
             
         </div>
@@ -106,5 +118,5 @@
     </div>
 
     <script src="js/contacts.js"></script>
-</body>
+</body> 
 </html>
