--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="ms-boozapp-container d-flex">
 
         <!-- Column Main Meesage Box -->
-        <div class="ms-list-contact col-4 flex-shrink-0">
+        <div class="ms-list-contact col-4 flex-shrink-0 h-100">
 
             <header>
 
@@ -49,7 +49,7 @@
 
             </header>
 
-            <main>
+            <main class="nav-contacts">
                 <!-- POPUP ENABLE NOTIFICATION -->
                 <div class="popup-receive-notification p-3 ms-bg-popup d-flex align-items-center">
                     <div class="ms-bell-notify d-flex justify-content-center align-items-center fs-5"><i class="fa-solid fa-bell-slash"></i></div>
@@ -61,12 +61,23 @@
 
                 <div class="chats d-flex flex-column ms-bg-primary-color">
 
+                    <!-- Searchbar for contacts -->
                     <div class="w-100 ms-bg-lightgray-color">
                         <div class="ms-contacts-searchbar m-2 ms-secondary-color">
                             <div class="ms-input-icon">
                                 <span><i class="fa-solid fa-magnifying-glass"></i></span>
                             </div>
                             <input type="text" placeholder="Cerca o inizia una nuova chat" aria-label="Search" aria-describedby="inputGroup-sizing-sm">
+                        </div>
+                    </div>
+
+                    <div class="contact-list d-flex flex-grow-1">
+                        <div id="app">
+                            <div v-for="(contact, index) in contacts">
+                                <p>{{contact.name}}</p>
+                                <img :src="contact.avatar" alt="">
+                                <small>{{contact.date}}</small>
+                            </div>
                         </div>
                     </div>
 
