--- a/index.html
+++ b/index.html
@@ -128,7 +128,11 @@
             </header>
 
             <main>
-                <div class="d-flex flex-grow-1"></div>
+                <div class="ms-messages-area d-flex flex-column">
+                    <div class="ms-message-box ms-received my-1">1</div>
+                    <div class="ms-message-box ms-sent my-1">1</div>
+                    <div class="ms-message-box ms-received my-1">1</div>
+                </div>
 
             </main>
 
