Add: message v-for creation

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
                     <!-- Contacts List includes: Cantact avatar, name and last message date -->
                     <div class="contact-list d-flex flex-column flex-grow-1">
-                        <div class="d-flex ms-card-contact" v-for="(contact, index) in contacts" :class="{active: index === currentContact}">
+                        <div class="d-flex ms-card-contact" v-for="(contact, index) in contacts" :class="{active: index === currentContact}" @click="changeContact(index)">
                             <div class="ms-avatar">
                                 <img :src="`img/avatar${contact.avatar}.jpg`" :alt="contact.name">
                             </div>
                             <div class="ms-contact-info px-3">
                                 {{contact.name}} <br>
-                                <small class="ms-secondary-color" v-for="(content in contact.messages">{{content.message}}</small>
+                                <small class="ms-secondary-color" v-for="content in contact.messages">{{content.message}}</small>
                             </div>
                             
                             <!-- Last message date -->
@@ -102,14 +102,15 @@
 
                 <div class="ms-boozapp-header ms-bg-secondary-gray d-flex justify-content-between px-2 align-items-center">
 
-                    <div class="ms-contact-profile d-flex align-items-center" v-for="(contact, index) in contacts[currentContact]">
-<!-- 
+                    <div class="ms-contact-profile d-flex align-items-center">
+
                         <div class="ms-header-avatar">
-                            <img :src="`img/avatar${contact.avatar}.jpg`" :alt="contact.name">
-                        </div> -->
+                            <img :src="`img/avatar${contacts[currentContact].avatar}.jpg`" :alt="contacts[currentContact].name">
+                        </div>
                         
                         <div class="ms-contact-profile-name px-2 fs-5">
-                            {{contact.name}}
+                            {{ contacts[currentContact].name }}
+
                         </div>
 
                     </div>
@@ -126,10 +127,11 @@
 
             <main>
                 <div class="ms-messages-area d-flex flex-column">
-                    <div class="ms-message-box ms-received my-1">
-                        <small></small>
+                    <div v-for="(message, index) in contacts[currentContact].messages" >
+                        <div class="ms-message-box my-1"  v-if="message.status === 'sent'" :class="{ status: sent}">{{message.message}}</div>
+                        <div class="ms-message-box my-1"  v-if="message.status === 'received'">{{message.message}}</div>
                     </div>
-                    <div class="ms-message-box ms-sent my-1">1</div>
+                    <div class="ms-message-box my-1"></div>
                 </div>
 
             </main>
