--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <!-- Contacts List includes: Cantact avatar, name and last message date -->
                     <div class="contact-list d-flex flex-column flex-grow-1">
                         <div v-for="(contact, index) in contacts" :class="{active: index === currentContact}" @click="changeContact(index)">
-                            <div v-if="contact.visible == true" class="d-flex ms-card-contact">
+                            <div v-if="searchContact(contact)" class="d-flex ms-card-contact">
 
                                 <div class="ms-avatar">
                                     <img :src="`img/avatar${contact.avatar}.jpg`" :alt="contact.name">
@@ -114,7 +114,7 @@
                         
                         <div class="ms-contact-profile-name px-2 fs-5">
                             {{ contacts[currentContact].name }} <br>
-                            <!-- <small class="ms-secondary-color ms-last-message-chat">Ultimo accesso avvenuto alle: {{contacts[currentContact].messsages[contacs[currentContacts].messages.lenght-1].message.date.substring(11,16)}} </small> -->
+                            <small class="ms-secondary-color ms-last-message-chat">Ultimo accesso avvenuto alle: {{contacts[currentContact].messages[contacts[currentContact].messages.length-1].date.substring(11,16)}} </small>
                         </div>
 
 
