--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <!-- FONT AWESOME-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
+    <!-- AXIOS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js" integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- BOOTSTRAP JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+    <!-- MOMENT -->
+    <script src="https://momentjs.com/downloads/moment.js"></script>r
     <!-- VUE JS -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
@@ -133,12 +140,27 @@
             <main>
                 <div class="ms-messages-area d-flex flex-column">
                     <div v-for="(message, index) in contacts[currentContact].messages" >
+                        
                         <div class="ms-message-box my-1"  v-if="message.status === 'sent'" :class="{ 'sent' : message.status === 'sent'}">{{message.message}}
                             <small class="ms-secondary-color ms-message-date">{{message.date.substring(11,16)}}</small>
+                            <div class="dropdown">
+                                <button class="ms-secondary-color dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                                <ul class="dropdown-menu">
+                                  <li><a class="dropdown-item" @click="deleteMessage(index)" href="#">Elimina messaggio</a></li>
+                                </ul>
+                            </div>
                         </div>
+
                         <div class="ms-message-box my-1"  v-if="message.status === 'received'" :class="{ 'received' : message.status === 'received'}">{{message.message}}
                             <small class="ms-secondary-color ms-message-date"> {{ message.date.substring(11,16 )}}</small>
+                            <div class="dropdown">
+                                <button class="ms-secondary-color dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                                <ul class="dropdown-menu">
+                                  <li><a class="dropdown-item" @click="deleteMessage(index)" href="#">Elimina messaggio</a></li>
+                                </ul>
+                            </div>
                         </div>
+
                     </div>
                     <div class="ms-message-box my-1"></div>
                 </div>
